5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4515/executions/1643_2443.log
== TEST (2019-04-15 14:48:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
import math
raiotanque = float(input("Raio do Tanque : "))
colunaar = float(input("Coluna de ar : "))
opcao = int(input("Calculo ( 1 )-Ar / ( 2 )-Combustivel"))

vesfera = (4*math.pi*raiotanque**3)/3
vcalota = (math.pi*)

-- ERROR:
File "XXXX", line 10
    vcalota = (math.pi*)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
import math
raiotanque = float(input("Raio do Tanque : "))
colunaar = float(input("Coluna de ar : "))
opcao = int(input("Calculo ( 1 )-Ar / ( 2 )-Combustivel"))

vesfera = (4*math.pi*raiotanque**3)/3
vcalota = (math.pi*colunaar**2*(3*raiotanque-colunaar))/3

-- ERROR:
File "XXXX", line 10
    vcalota = (math.pi*)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
import math
raiotanque = float(input("Raio do Tanque : "))
colunaar = float(input("Coluna de ar : "))
opcao = int(input("Calculo ( 1 )-Ar / ( 2 )-Combustivel"))

vesfera = (4*math.pi*raiotanque**3)/3
vcalota = (math.pi*colunaar**2*(3*raiotanque-colunaar))/3
vcombustivel = abs(vesfera-vcalota)

-- ERROR:
File "XXXX", line 10
    vcalota = (math.pi*)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:53:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
import math
raiotanque = float(input("Raio do Tanque : "))
colunaar = float(input("Coluna de ar : "))
opcao = int(input("Calculo ( 1 )-Ar / ( 2 )-Combustivel"))

vesfera = (4*math.pi*raiotanque**3)/3
vcalota = (math.pi*colunaar**2*(3*raiotanque-colunaar))/3
vcombustivel = vesfera-vcalota

if(opcao == 1):
	print(round(vcalota,4))
else:	
	print(round(vcombustivel,4))

-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:53:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
import math
raiotanque = float(input("Raio do Tanque : "))
colunaar = float(input("Coluna de ar : "))
opcao = int(input("Calculo ( 1 )-Ar / ( 2 )-Combustivel"))

vesfera = (4*math.pi*raiotanque**3)/3
vcalota = (math.pi*colunaar**2*(3*raiotanque-colunaar))/3
vcombustivel = vesfera-vcalota

if(opcao == 1):
	print(round(vcalota,4))
else:	
	print(round(vcombustivel,4))

-- EXECUTION TIME:
0.171507
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
